--- a/exercicios_16-09-21/index.html
+++ b/exercicios_16-09-21/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="index.html"></a>Home</li>
-        <li><a href="contato."></a>Contato</li>
-    </ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contato.html">Contato</a></li>
+</ul>
     <h1>Sobre Vinicius</h1>
 
     <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Fusce congue nulla ultricies, venenatis dolor sed, sodales nisi. Sed eleifend, lacus quis mattis porta, ipsum mauris suscipit lorem, non ullamcorper nunc lorem in lectus. Aliquam venenatis sem sit amet nunc interdum accumsan. Integer vel enim euismod, volutpat lorem a, ultricies velit. Aliquam porttitor mi vel nibh luctus hendrerit. Sed nec finibus eros, quis faucibus felis. Proin erat enim, suscipit ac tortor in, semper malesuada lorem</p>
